1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* app/render_eps.c (draw_image):
	Fixed exporting of images.
	Still not perfect, but not outright buggy.
	
1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	* po/hu.po:
	Added hungarian translation. By Shooby Ban <bansz@szif.hu>.

	* app/Makefile.am:
	Added $* to the dia call in run_dia.sh

1999-03-22  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>
	
	* lib/color.[ch]:
	Added color_equals() call.

	* objects/standard/arc.c:
	* objects/standard/line.c:
	Don't save unneccesary data.
	
	* objects/standard/box.c:
	* objects/standard/ellipse.c:
	* objects/standard/image.c:
	* objects/standard/polyline.c:
	* objects/standard/zigzagline.c:
	Share properties dialog.
	Don't save unneccesary data.
	
1999-03-22  Seth Alves  <alves@hungry.com>

	* app/menus.c:
	* app/diagram.c:
	* app/display.c:
	small changes so that gnome menus aren't broken
	
1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* po/da.po:
	Added danish translation from lrclause@cs.uiuc.edu.

	* po/POFILES.in:
	Updated file.

	* po/update_pofiles_in.sh:
	Added script that updates POFILES.in.
	This should probably be run automatically from somewhere.

1999-03-19  Alexander Larsson  <alla@lysator.liu.se>

	* app/diagram.[ch]:
	Added function diagram_update_menu_sensitivity() which
	sets the sensitivity of some menu items. This function
	is called at each diagram state change (from diagram_modified()).
	This is needed 	because otherwise the keyboard accelerators
	don't work correctly.

	* app/display.[ch]:
	Changed display_set_menu_sensitivity() to display_update_menu_state().
	Moved lots of code to diagram_update_menu_sensitivity() in
	diagram.c. Optimized to only look up menu-items from path:s once.
	
	* app/disp_callbacks.c:
	* app/interface.c:
	When we get a GDK_FOCUS_CHANGE, update menu sensitivity.
	Need to set GDK_FOCUS_CHANGE_MASK.
	
	* app/create_object.c:
	Call diagram_modified when an object has been created and